--- a/back/vercel.json
+++ b/back/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "./app.js",			
+        "src": "api/app.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/.*",
-        "dest": "/api"
+        "src": "/(.*)",
+        "dest": "api/app.js"
       }
     ]
   }
