--- a/back/vercel.json
+++ b/back/vercel.json
@@ -8,8 +8,9 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "./api"
+        "src": "/[^.]+",
+        "dest": "/api",
+        "status": 200
       }
     ]
   }
