--- a/back/vercel.json
+++ b/back/vercel.json
@@ -2,15 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "app.js",			
+        "src": "*.js",			
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/[^.]+",
-        "dest": "/",
-        "status": 200
+         "src": "/(.*)",
+          "dest": "/"
       }
     ]
   }
